Add transtations. Created basic models. Added userdialog form, search form, user queue form. alpha version

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -13,7 +13,17 @@
   <property name="windowTitle">
    <string>Citizen queue</string>
   </property>
-  <widget class="QWidget" name="centralWidget"/>
+  <widget class="QWidget" name="centralWidget">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QTabWidget" name="mainTabWidget">
+      <property name="currentIndex">
+       <number>-1</number>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
