--- a/userqueueform.ui
+++ b/userqueueform.ui
@@ -17,23 +17,70 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QToolButton" name="moveUp">
-       <property name="text">
-        <string>...</string>
+      <widget class="QToolButton" name="makeFirst">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="icon">
+        <iconset resource="main.qrc">
+         <normaloff>:/images/ic_looks_one_black_24px.svg</normaloff>:/images/ic_looks_one_black_24px.svg</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QToolButton" name="delete_2">
-       <property name="text">
-        <string>...</string>
+      <widget class="QToolButton" name="moveUp">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="icon">
+        <iconset resource="main.qrc">
+         <normaloff>:/images/ic_arrow_upward_black_24px.svg</normaloff>:/images/ic_arrow_upward_black_24px.svg</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QToolButton" name="moveDown">
-       <property name="text">
-        <string>...</string>
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="icon">
+        <iconset resource="main.qrc">
+         <normaloff>:/images/ic_arrow_downward_black_24px.svg</normaloff>:/images/ic_arrow_downward_black_24px.svg</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="print">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="icon">
+        <iconset resource="main.qrc">
+         <normaloff>:/images/ic_print_black_24px.svg</normaloff>:/images/ic_print_black_24px.svg</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
        </property>
       </widget>
      </item>
@@ -53,10 +100,12 @@
     </layout>
    </item>
    <item>
-    <widget class="QListView" name="userQueue"/>
+    <widget class="QTableView" name="queueView"/>
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="main.qrc"/>
+ </resources>
  <connections/>
 </ui>
